* frame.el (window-system-version): Mark as obsolete.
See http://lists.gnu.org/archive/html/emacs-devel/2012-05/msg00412.html

--- a/etc/NEWS
+++ b/etc/NEWS
@@ -695,6 +695,7 @@ by the underlying C implementation.
 
 ** `automount-dir-prefix' is obsolete.
 ** `buffer-has-markers-at' is obsolete.
+** `window-system-version' is obsolete.
 
 * Changes in Emacs 24.3 on non-free operating systems
 
