--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-09-06  Chong Yidong  <cyd@gnu.org>
+
+	* frame.el (window-system-version): Mark as obsolete.
+
 2012-09-06  Juri Linkov  <juri@jurta.org>
 
 	* replace.el (replace-lax-whitespace): New defcustom.
