MS-Windows followup for revision 109909, signal-handler cleanup.
 src/w32proc.c (sigaction): New function, emulates Posix 'sigaction'.
 src/w32.c (sigemptyset): Empty the set.
 (sigsetmask, sigmask, sigblock, sigunblock): Remove unused functions.

 nt/inc/ms-w32.h (struct sigaction): Declare sa_handler __cdecl.

--- a/nt/ChangeLog
+++ b/nt/ChangeLog
@@ -1,3 +1,7 @@
+2012-09-07  Eli Zaretskii  <eliz@gnu.org>
+
+	* inc/ms-w32.h (struct sigaction): Declare sa_handler __cdecl.
+
 2012-09-05  Juanma Barranquero  <lekktu@gmail.com>
 
 	* config.nt: Sync with autogen/config.in.
