--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,5 +1,7 @@
 2012-09-07  Chong Yidong  <cyd@gnu.org>
 
+	* positions.texi (Narrowing): Document buffer-narrowed-p.
+
 	* markers.texi (Moving Markers): Add xref to Point (Bug#7151).
 
 	* syntax.texi (Low-Level Parsing): Add xref to Parser State
