Remove obsolete display-buffer-reuse-frames from manuals.
* doc/emacs/windows.texi (Window Choice): Don't mention obsolete
display-buffer-reuse-frames.

* doc/lispref/windows.texi (Display Action Functions)
(Choosing Window Options): Remove obsolete variable
display-buffer-reuse-frames.

--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,5 +1,9 @@
 2012-09-07  Chong Yidong  <cyd@gnu.org>
 
+	* windows.texi (Display Action Functions)
+	(Choosing Window Options): Remove obsolete variable
+	display-buffer-reuse-frames.
+
 	* positions.texi (Narrowing): Document buffer-narrowed-p.
 
 	* markers.texi (Moving Markers): Add xref to Point (Bug#7151).
