--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -1,3 +1,8 @@
+2012-09-07  Chong Yidong  <cyd@gnu.org>
+
+	* windows.texi (Window Choice): Don't mention obsolete
+	display-buffer-reuse-frames.
+
 2012-09-04  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Give more-useful info on a fatal error (Bug#12328).
