--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-09-08  Chong Yidong  <cyd@gnu.org>
+
+	* subr.el (syntax-after, syntax-class): Doc fix.
+
 2012-09-08  Martin Rudalics  <rudalics@gmx.at>
 
 	* window.el (display-buffer-in-previous-window): New buffer
