--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-09-08  Dmitry Gutov  <dgutov@yandex.ru>
+
+	* progmodes/ruby-mode.el (ruby-match-expression-expansion): Only
+	fail when reached LIMIT.
+
 2012-09-08  Chong Yidong  <cyd@gnu.org>
 
 	* dired.el (dired-mode-map): Don't bind M-=.
