--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-09-08  Jan Djärv  <jan.h.d@swipnet.se>
+
+	* nsterm.m (updateFrameSize): Call setFrame: on the view when size
+	changes (Bug#12088).
+
 2012-09-08  Chong Yidong  <cyd@gnu.org>
 
 	* syntax.c (Fstring_to_syntax): Doc fix.
