--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,11 @@
+2012-09-08  Alan Mackenzie  <acm@muc.de>
+
+	AWK Mode: make auto-newline work when there's "==" in the pattern.
+	* progmodes/cc-cmds.el (c-point-syntax): Handle virtual semicolons
+	correctly.
+	* progmodes/cc-engine.el (c-guess-basic-syntax CASE 5A.3): Test
+	more rigorously for "=" token.
+
 2012-09-08  Dmitry Gutov  <dgutov@yandex.ru>
 
 	* progmodes/ruby-mode.el (ruby-match-expression-expansion): Only
